# speedrunners-of-osrs

./: .gitignore  Markov modelling.py  batch_item_load.py  batch_monster_load.py  drop_all_supabase_tables.sql  dynamic_markov_model.py  equipment.json  equipmentAliases.json  gear_image_map.json  get_equipment.py  grab_and_load_data.py  guardians_sim.py  guardians_sim.rs  helpers.py  helpers_melee.py  lib.rs  monster_json.json  monsters-complete(1).json  mutta_sim.py  mutta_test_payload.json  new_tekton_sim.py  new_tekton_sim_payload.json  new_vasa_payload.json  new_vasa_sim.py  new_vasa_sim_markov.py  populate_equipment_weapon_tables.py  schema.mmd  sim_ttk.py  sim_ttk2.py  sim_ttk_dist.py  supabase_table_schema.sql  temp.json  temp2.py  temp_accuracy.py  test_markov.py  test_markov_dist.py  test_multi_markov.py  test_multi_payload.json  test_mystics.py  test_payload.json  (+8 more)
.github/workflows/: build-production.yml
frontend/: index.html  monsters.json  package-lock.json  package.json  test.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: CharacterModelCard.tsx  FloatingBackground.css  FloatingBackground.tsx  GearModelCard.tsx  GearSelection.css  GearSelection.tsx  GearSlotMultiSelect.css  GearSlotMultiSelect.tsx  Header.css  Header.tsx  InventoryItems.css  InventoryItems.tsx  PlotSection.css  PlotSection.tsx  (+3 more)
frontend/wasm-lib/: Cargo.toml
frontend/wasm-lib/shamans/: Cargo.toml
frontend/wasm-lib/shamans/src/: lib.rs
osrs-markov-wasm/: Cargo.toml
osrs-markov-wasm/src/: lib.rs
osrs-markov-wasm/www/: index.html  main.js
(+70 files in other folders)
